# Bi-criteria-Search-Algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt
Algorithm/: Algorithm.hpp  BOA.cpp  BOA.hpp  DummyAlgorithm.cpp  DummyAlgorithm.hpp  PPA.cpp  PPA.hpp
Containers/: Closed.hpp  MapClosed.cpp  MapClosed.hpp  MapSetOpen.cpp  MapSetOpen.hpp  Open.hpp  PPFClosed.hpp  PPFOpen.hpp  SimplePPFOpen.cpp  SimplePPFOpen.hpp
Examples/Graphs/: graph_example_coords.co  graph_example_full_information.gr  graph_example_time.gr
Examples/Output/: History.txt  Solutions.txt
PythonKernels/: csvToPlot.ipynb
Scripts/: dijkstra.py  littleGraph.txt  mergeGraphFiles.py  renderHistory.py  run.py  run.sh  serviceForDijkstra.py
Service/: AlgorithmSet.cpp  AlgorithmSet.hpp  AlgorithmState.cpp  AlgorithmState.hpp  BOANode.cpp  BOANode.hpp  Graph.cpp  Graph.hpp  HeuristicFunction.cpp  HeuristicFunction.hpp  Measurements.cpp  Measurements.hpp  Node.cpp  Node.hpp  Options.cpp  Options.hpp  PPF.cpp  PPF.hpp  PairHash.hpp  Solutions.cpp  Solutions.hpp
Tasks/: epsilonTask.sh
